Fixed bug so page loads at top rather than bottom, removed excess whitespace from home section.

--- a/index.css
+++ b/index.css
@@ -180,7 +180,7 @@ html, body {
 
 #home {
     background-color: #29fff4;
-    margin-top: 45px;
+    padding-top: 45px;
 }
 
 #about {
